--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,13 @@
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: 'Roboto', sans-serif;
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+
 }
 
 .app {
@@ -14,4 +19,43 @@ body {
   max-width: 1440px;
   margin: 0 auto;
   padding: 0 10px;
+}
+
+.main {
+  display: flex;
+}
+
+.arrow-down {
+  position: fixed;
+  right: 104px;
+  bottom: 100px;
+}
+.arrow-down span {
+  display: block;
+  width: 30px;
+  height: 30px;
+  border-bottom: 5px solid rgba(137, 205, 255, 0.27);
+  border-right: 5px solid rgba(137, 205, 255, 0.27);
+  transform: rotate(45deg);
+  margin: -16px;
+  animation: arrow-down 2s infinite;
+}
+.arrow-down span:nth-child(2){
+  animation-delay: -0.2s;
+}
+.arrow-down span:nth-child(3){
+  animation-delay: -0.4s;
+}
+@keyframes arrow-down {
+  0%{
+    opacity: 0;
+    transform: rotate(45deg) translate(-20px,-20px);
+  }
+  50%{
+    opacity: 1;
+  }
+  100%{
+    opacity: 0;
+    transform: rotate(45deg) translate(20px,20px);
+  }
 }
