--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -5,6 +5,12 @@
  height: 70px;
 }
 
+.logo {
+ display: flex;
+ justify-content: center;
+ width: 200px;
+}
+
 .userInfoWrap {
  display: flex;
  justify-content: flex-end;
